--- a/Frontend/src/components/Footer/style.css
+++ b/Frontend/src/components/Footer/style.css
@@ -7,6 +7,7 @@
 .footer-sections {
   display: flex;
   justify-content: space-around;
+  flex-wrap: wrap;
   margin-bottom: 30px;
   margin-top: 10px;
 }
