--- a/Frontend/src/pages/WebAdmin/style.css
+++ b/Frontend/src/pages/WebAdmin/style.css
@@ -1,14 +1,12 @@
 .wb-content {
   display: flex;
   flex-wrap: wrap;
-  margin-block-end: 100px;
-  padding: 30px 0px 0px 0px;
-  height: auto;
+  flex: 1;
+  margin-block-end: 160px;
 }
 
 .wb-menu {
-  width: 30%;
-  margin: 0px 30px 30px 30px;
+  width: 500px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -57,6 +55,6 @@
 }
 
 .wb-show {
-  width: 60%;
+  display: flex;
+  width: 600px;
 }
-
