--- a/Frontend/src/components/Footer/style.css
+++ b/Frontend/src/components/Footer/style.css
@@ -1,4 +1,5 @@
 .footer-bg {
+  margin-top: auto;
   width: 100%;
   padding: 10px 0px 0px 0px;
   background-color: var(--iris-blue);
@@ -8,6 +9,7 @@
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
+  flex: 1;
   margin-bottom: 30px;
   margin-top: 10px;
 }
