--- a/Frontend/src/pages/WebAdmin/WAProducts/style.css
+++ b/Frontend/src/pages/WebAdmin/WAProducts/style.css
@@ -140,3 +140,35 @@
   background-color: #f07067a6;
   color: #fff;
 }
+
+.wap-edit {
+  padding: 20px 20px 0 20px;
+}
+
+.wap-edit-header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: -35px;
+  color: var(--iris-blue);
+  font-size: 22px;
+}
+
+.wap-edit button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 20px;
+  background-color: #fff;
+  border: 3px solid var(--iris-blue);
+  border-radius: 15px;
+  color: var(--iris-blue);
+  font-family: 'Poppins', sans-serif;
+  font-size: 16px;
+  width: 100px;
+}
+
+.wap-edit button:hover {
+  background-color: #f07067a6;
+  color: #fff;
+}
