--- a/Frontend/src/pages/WebAdmin/WAProducts/style.css
+++ b/Frontend/src/pages/WebAdmin/WAProducts/style.css
@@ -1,13 +1,18 @@
 .wap-header {
   display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  height: 80px;
   flex-wrap: wrap;
   background-color: #fff;
   box-shadow: 0 0 10px 0px rgb(0, 0, 0, 0.35);
 }
 
-.wap-title {
+.wap-title h2{
+  display: flex;
+  justify-content: flex-start;
   padding-left: 50px;
-  font-size: 22px;
+  font-size: 30px;
   color: var(--iris-blue);
   width: 400px;
 }
