--- a/Frontend/src/components/Header/style.css
+++ b/Frontend/src/components/Header/style.css
@@ -37,7 +37,7 @@
     text-decoration: none;
 }
 
-.header-insta {
+.bn-modal {
     width: 24px;
     margin-left: 15px;
     margin-right: 10px;
@@ -85,4 +85,20 @@
     padding-bottom: 15px;
   }
   
+  }
+
+  .openModal{
+    display: flex;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    transition-duration: 250ms;
+    align-items: center;
+  }
+
+
+  .bn-info h2{
+    font-size: 25px;
+    color: var(--pink);
+    border: 0;
   }
