--- a/Frontend/src/components/LoginModal/style.css
+++ b/Frontend/src/components/LoginModal/style.css
@@ -8,6 +8,7 @@
   top: 0;
   left: 0;
   background: rgba(0, 0, 0, 0.5);
+  z-index: 999;
 }
 
 .lm-bg .lm-border {
@@ -32,7 +33,7 @@
   border: none;
   cursor: pointer;
   transition-duration: 250ms;
-  align-items: center;
+  align-items: flex-end;
   margin-top: -15px;
   margin-right: -25px;
 }
