--- a/Frontend/src/components/LoginModal/style.css
+++ b/Frontend/src/components/LoginModal/style.css
@@ -20,6 +20,8 @@
 }
 
 .lm-bg .lm-border .lm-content {
+  display: flex;
+  flex-direction: column;
   background-color: #fff;
   max-width: 450px;
   min-height: 300px;
