--- a/Frontend/src/components/SidebarWA/style.css
+++ b/Frontend/src/components/SidebarWA/style.css
@@ -86,6 +86,8 @@
   width: 100%;
   height: 100%;
   text-decoration: none;
+  border: none;
+  background-color: transparent;
   color: var(--iris-blue);
   font-size: 18px;
 }
