botones con filtro
ahora sólo tengo que probarlo con la bd del proyecto

--- a/Frontend/src/components/Productos/style.css
+++ b/Frontend/src/components/Productos/style.css
@@ -28,7 +28,7 @@
 .products-list {
   padding: 5rem 2rem;
   margin: 0 auto;
-  display: grid;
+  display:grid;
   grid-template-columns: repeat(auto-fit, minmax(22rem, 1fr));
   gap: 3rem 1rem;
   box-sizing: border-box;
@@ -47,7 +47,8 @@
 }
 
 .producto-img img {
-  width: 310px;
+  width: 250px;
+  height: 250px;
 }
 
 .producto-footer {
