--- a/Frontend/src/components/ProductsSF/style.css
+++ b/Frontend/src/components/ProductsSF/style.css
@@ -129,3 +129,27 @@
 .buttom div a:hover{
     color: white;
 }
+
+.sin-productos{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.sin-productos h1{
+  margin-top: 20px;
+  margin-bottom: 20px;
+  font-weight: 600;
+  background-color: white;
+  text-align: center;
+  background-color: transparent;
+  border: 3px solid var(--iris-blue);
+  border-radius: 15px;
+  font-family: 'Poppins', sans-serif;
+  color: var(--iris-blue);
+  font-size: 50px;
+}
