--- a/Frontend/src/pages/Carteras/style.css
+++ b/Frontend/src/pages/Carteras/style.css
@@ -1,6 +1,8 @@
 .car-content{
     display: flex;
-    margin-block-end: 100px;
-    padding: 30px 0px 0px 0px;
-    height: auto;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    width: 100%;
+    flex-direction: column;
 }
