--- a/Frontend/src/components/OrderModal/style.css
+++ b/Frontend/src/components/OrderModal/style.css
@@ -1,4 +1,4 @@
-.wao-modal-bg {
+.order-modal-bg {
   width: 100%;
   height: 100%;
   position: fixed;
@@ -11,7 +11,7 @@
   z-index: 999;
 }
 
-.wao-modal-card {
+.order-modal-card {
   background-color: #fff;
   width: fit-content;
   padding: 20px;
@@ -20,7 +20,7 @@
   box-shadow: 0 0 20px -8px rgb(0, 0, 0, 0.5);
 }
 
-.wao-modal-section {
+.order-modal-section {
   display: flex;
   flex-direction: column;
   width: 100%;
@@ -28,12 +28,12 @@
   align-items: center;
 }
 
-.wao-modal-section h3 {
+.order-modal-section h3 {
   color: var(--pink);
   margin: 10px 0 10px 0;
 }
 
-.wao-modal-section input {
+.order-modal-section input {
   padding: 5px 15px 5px 15px;
   outline: none;
   background-color: transparent;
@@ -45,7 +45,7 @@
   margin-bottom: 15px;
 }
 
-.wao-modal-button button {
+.order-modal-button button {
   padding: 5px 15px 5px 15px;
   outline: none;
   background-color: var(--iris-blue);
@@ -57,38 +57,38 @@
   margin-bottom: 15px;
 }
 
-.wao-modal-button button:hover {
+.order-modal-button button:hover {
   background-color: var(--pink);
 }
 
 @media (min-width: 0px) {  
-  .wao-modal-section input, .wao-modal-section h3 {
+  .order-modal-section input, .order-modal-section h3 {
     width: 300px;
     font-size: 14px;
   }
-  .wao-modal-button button{
+  .order-modal-button button{
     width: 100px;
     font-size: 14px;
   }
 }
 
 @media (min-width: 360px) {
-  .wao-modal-section input,.wao-modal-section h3 {
+  .order-modal-section input,.order-modal-section h3 {
     width: 340px;
     font-size: 16px;
   }
-  .wao-modal-button button{
+  .order-modal-button button{
     width: 120px;
     font-size: 16px;
   }
 }
 
 @media (min-width: 720px) {
-  .wao-modal-section input, .wao-modal-section h3 {
+  .order-modal-section input, .order-modal-section h3 {
     width: 600px;
     font-size: 20px;
   }
-  .wao-modal-button button{
+  .order-modal-button button{
     width: 150px;
     font-size: 20px;
   }
