--- a/Frontend/src/pages/WebAdmin/WAProducts/style.css
+++ b/Frontend/src/pages/WebAdmin/WAProducts/style.css
@@ -74,12 +74,18 @@
 
 .wap-content {
   display: flex;
+  flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-around;
 }
 
 .wap-product {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
   width: 300px;
+  height: 400px;
   padding: 10px;
   margin: 15px;
   border-radius: 15px;
